<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.quiz.MainActivity">


        <!-- Image Author: http://i.quizhive.com/quizhive/191_title_1.jpg -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/quiz"/>
        <TextView
            style="@style/Instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <!-- Question #1 -->
        <TextView
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"/>
        <RadioGroup
            android:id="@+id/Question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/ques1ans1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques1ans1"/>
            <RadioButton
                android:id="@+id/ques1ans2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques1ans2"/>
            <RadioButton
                android:id="@+id/ques1ans3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques1ans3"/>

            <RadioButton
                android:id="@+id/ques1ans4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques1ans4"/>
        </RadioGroup>

        <!-- Question #2 -->
        <TextView
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"/>
        <RadioGroup
            android:id="@+id/Question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/ques2ans1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques2ans1"/>
            <RadioButton
                android:id="@+id/ques2ans2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques2ans2"/>
            <RadioButton
                android:id="@+id/ques2ans3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques2ans3"/>
            <RadioButton
                android:id="@+id/ques2ans4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques2ans4"/>
        </RadioGroup>

        <!-- Question #3 -->
        <TextView
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/ques3ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ques3ans1" />
                <CheckBox
                    android:id="@+id/ques3ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ques3ans2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/ques3ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ques3ans3"/>
                <CheckBox
                    android:id="@+id/ques3ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text ="@string/ques3ans4"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Question #4 -->
        <TextView
            style="@style/Questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/question4"/>
        <EditText
            style="@style/EditText"
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ques4hint"
            android:singleLine="true"/>

        <!-- Grade Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="grade"
            android:text= "@string/button_label" />
    </LinearLayout>
</ScrollView>